Schema: Fix a couple more missing details

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -522,8 +522,8 @@
 		[/tag]
 		[tag]
 			name="move"
-			{SIMPLE_KEY x s_int}
-			{SIMPLE_KEY y s_int}
+			{SIMPLE_KEY x s_range_list}
+			{SIMPLE_KEY y s_range_list}
 			{SIMPLE_KEY skip_sighted string} # TODO: Make this an enum type
 		[/tag]
 		[tag]
@@ -911,6 +911,7 @@
 		max=infinite
 		{SIMPLE_KEY message string}
 		{SIMPLE_KEY logger logger}
+		{SIMPLE_KEY to_chat s_bool}
 	[/tag]
 	[tag]
 		name="test_condition"
