Schema: Add a macro for links (and make use of it)

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -46,12 +46,8 @@
 	max=0
 	{INSERT_TAG}
 	{ACTION_TAG "command" max=infinite}
-	[link]
-		name="event"
-	[/link]
-	[link]
-		name="lua"
-	[/link]
+	{LINK_TAG "event"}
+	{LINK_TAG "lua"}
 	# Flow control (ConditionalActionsWML)
 	[tag]
 		name="if"
@@ -343,18 +339,10 @@
 		{INSERT_TAG}
 		{FILTER_TAG "filter" unit {INSERT_TAG}}
 		{SIMPLE_KEY mode string} # TODO: This is undocumented and it's unclear what's allowed here; probably should be an enum though?
-		[link]
-			name="units/$modifications/trait"
-		[/link]
-		[link]
-			name="units/$modifications/advancement"
-		[/link]
-		[link]
-			name="units/$modifications/object"
-		[/link]
-		[link]
-			name="units/$modifications/base/effect"
-		[/link]
+		{LINK_TAG "units/$modifications/trait"}
+		{LINK_TAG "units/$modifications/advancement"}
+		{LINK_TAG "units/$modifications/object"}
+		{LINK_TAG "units/$modifications/base/effect"}
 	[/tag]
 	[tag]
 		name="transform_unit"
@@ -486,9 +474,7 @@
 		name="replace_schedule"
 		max=infinite
 		{INSERT_TAG}
-		[link]
-			name="scenario/time"
-		[/link]
+		{LINK_TAG "scenario/time"}
 		{SIMPLE_KEY current_time s_unsigned}
 	[/tag]
 	[tag]
@@ -821,17 +807,13 @@
 		{REQUIRED_KEY name string_list}
 		{DEFAULT_KEY repeat s_unsigned 0}
 	[/tag]
-	[link]
-		name="scenario/sound_source"
-	[/link]
+	{LINK_TAG "scenario/sound_source"}
 	[tag]
 		name="story"
 		max=infinite
 		super="scenario/story"
 	[/tag]
-	[link]
-		name="titlescreen_music/music"
-	[/link]
+	{LINK_TAG "titlescreen_music/music"}
 	[tag]
 		name="volume"
 		max=infinite
