--- a/data/schema/core/addons.cfg
+++ b/data/schema/core/addons.cfg
@@ -149,15 +149,9 @@
 		max=infinite
 		{REQUIRED_KEY id string}
 	[/tag]
-	[link]
-		name="event"
-	[/link]
-	[link]
-		name="lua"
-	[/link]
-	[link]
-		name="ais/ai"
-	[/link]
+	{LINK_TAG "event"}
+	{LINK_TAG "lua"}
+	{LINK_TAG "ais/ai"}
 [/tag]
 [tag]
 	name="campaign"
@@ -182,12 +176,8 @@
 	{SIMPLE_KEY start_year irdya_date}
 	{SIMPLE_KEY end_year irdya_date}
 	{SIMPLE_KEY year irdya_date}
-	[link]
-		name="era/options"
-	[/link]
-	[link]
-		name="about"
-	[/link]
+	{LINK_TAG "era/options"}
+	{LINK_TAG "about"}
 	[tag]
 		name="difficulty"
 		max=infinite
@@ -221,9 +211,7 @@
 	{SIMPLE_KEY require_era bool}
 	{DEFAULT_KEY hide_help bool no}
 	{DEFAULT_KEY type addon_type sp}
-	[link]
-		name="multiplayer_side"
-	[/link]
+	{LINK_TAG "multiplayer_side"}
 	[tag]
 		name="options"
 		[tag]
@@ -284,9 +272,7 @@
 	{BASE_COMPATIBILITY_KEYS}
 	{SIMPLE_KEY ignore_incompatible_scenario string_list}
 	{DEFAULT_KEY require_modification bool no}
-	[link]
-		name="era/options"
-	[/link]
+	{LINK_TAG "era/options"}
 [/tag]
 [tag]
 	name="resource"
@@ -403,15 +389,9 @@
 					super="scenario/story/part"
 				[/tag]
 			[/tag]
-			[link]
-				name="scenario/story/image"
-			[/link]
-			[link]
-				name="$action_wml/deprecated_message"
-			[/link]
-			[link]
-				name="$action_wml/wml_message"
-			[/link]
+			{LINK_TAG "scenario/story/image"}
+			{LINK_TAG "$action_wml/deprecated_message"}
+			{LINK_TAG "$action_wml/wml_message"}
 		[/tag]
 		[tag]
 			name="if"
@@ -442,12 +422,8 @@
 				super="scenario/story"
 			[/tag]
 		[/tag]
-		[link]
-			name="$action_wml/deprecated_message"
-		[/link]
-		[link]
-			name="$action_wml/wml_message"
-		[/link]
+		{LINK_TAG "$action_wml/deprecated_message"}
+		{LINK_TAG "$action_wml/wml_message"}
 	[/tag]
 	[tag]
 		name="label"
@@ -490,9 +466,7 @@
 		max=infinite
 		{SIMPLE_KEY x range_list}
 		{SIMPLE_KEY y range_list}
-		[link]
-			name="scenario/time"
-		[/link]
+		{LINK_TAG "scenario/time"}
 	[/tag]
 	[tag]
 		name="side"
@@ -537,18 +511,10 @@
 		{DEFAULT_KEY full_range s_unsigned 14}
 		{SIMPLE_KEY loop s_int}
 	[/tag]
-	[link]
-		name="titlescreen_music/music"
-	[/link]
-	[link]
-		name="terrain_graphics"
-	[/link]
-	[link]
-		name="game_config/color_palette"
-	[/link]
-	[link]
-		name="game_config/color_range"
-	[/link]
+	{LINK_TAG "titlescreen_music/music"}
+	{LINK_TAG "terrain_graphics"}
+	{LINK_TAG "game_config/color_palette"}
+	{LINK_TAG "game_config/color_range"}
 	# TODO: Document [menu_item] and [undo_stack]
 	[if]
 		map_generation=default
@@ -594,9 +560,7 @@
 	{SIMPLE_KEY require_scenario bool}
 	{SIMPLE_KEY mp_village_gold int}
 	{SIMPLE_KEY define string}
-	[link]
-		name="era/options"
-	[/link]
+	{LINK_TAG "era/options"}
 [/tag]
 [tag]
 	name="generic_multiplayer"
