--- a/data/schema/core/conditionalwml.cfg
+++ b/data/schema/core/conditionalwml.cfg
@@ -44,9 +44,7 @@
 		{REQUIRED_KEY id string}
 	[/tag]
 	{EMPTY_TAG "proceed_to_next_scenario" 0 infinite}
-	[link]
-		name="lua"
-	[/link]
+	{LINK_TAG "lua"}
 	[tag]
 		name="and,or,not"
 		super="$condition_wml"
