--- a/data/schema/core/config.cfg
+++ b/data/schema/core/config.cfg
@@ -140,15 +140,11 @@
 [/tag]
 [tag]
 	name="lobby_music"
-	[link]
-		name="titlescreen_music/music"
-	[/link]
+	{LINK_TAG "titlescreen_music/music"}
 [/tag]
 [tag]
 	name="editor_music"
-	[link]
-		name="titlescreen_music/music"
-	[/link]
+	{LINK_TAG "titlescreen_music/music"}
 [/tag]
 [tag]
 	name="advanced_preference"
@@ -223,9 +219,7 @@
 	name="credits_group"
 	max=infinite
 	{SIMPLE_KEY sort bool}
-	[link]
-		name="about"
-	[/link]
+	{LINK_TAG "about"}
 [/tag]
 
 [tag]
