--- a/data/schema/core/mapgen/default.cfg
+++ b/data/schema/core/mapgen/default.cfg
@@ -56,13 +56,7 @@
 		{REQUIRED_KEY valid_terrain terrain_list}
 		{REQUIRED_KEY min_distance unsigned}
 	[/tag]
-	[link]
-		name="naming"
-	[/link]
-	[link]
-		name="village_naming"
-	[/link]
-	[link]
-		name="scenario"
-	[/link]
+	{LINK_TAG "naming"}
+	{LINK_TAG "village_naming"}
+	{LINK_TAG "scenario"}
 [/tag]
