--- a/data/schema/editor/times.cfg
+++ b/data/schema/editor/times.cfg
@@ -4,7 +4,5 @@
 	max=infinite
 	{REQUIRED_KEY id string}
 	{SIMPLE_KEY name t_string}
-	[link]
-		name="scenario/time"
-	[/link]
+	{LINK_TAG "scenario/time"}
 [/tag]
