--- a/data/schema/gui.cfg
+++ b/data/schema/gui.cfg
@@ -68,12 +68,8 @@
                         min="0"
                         max="infinite"
                         super="gui/window/resolution/grid/row/column"
-                        [link]
-                            name="gui/window/resolution/grid/row/column/toggle_button"
-                        [/link]
-                        [link]
-                            name="gui/window/resolution/grid/row/column/toggle_panel"
-                        [/link]
+                        {LINK_TAG "gui/window/resolution/grid/row/column/toggle_button"}
+                        {LINK_TAG "gui/window/resolution/grid/row/column/toggle_panel"}
                         {DEFAULT_KEY "icon" t_string ""}
                         {DEFAULT_KEY "label" t_string ""}
                         {DEFAULT_KEY "tooltip" t_string ""}
@@ -270,9 +266,7 @@
                     min="0"
                     max="infinite"
                     super="generic/widget_definition/resolution"
-                    [link]
-                        name="gui/window/resolution/grid"
-                    [/link]
+                    {LINK_TAG "gui/window/resolution/grid"}
                 [/tag]
             [/tag]
             [tag]
@@ -459,9 +453,7 @@
                         max="1"
                         super="generic/state"
                     [/tag]
-                    [link]
-                        name="gui/window/resolution/grid"
-                    [/link]
+                    {LINK_TAG "gui/window/resolution/grid"}
                 [/tag]
             [/tag]
             [tag]
@@ -522,9 +514,7 @@
                     min="0"
                     max="infinite"
                     super="gui/panel_definition/resolution"
-                    [link]
-                        name="gui/window/resolution/grid"
-                    [/link]
+                    {LINK_TAG "gui/window/resolution/grid"}
                 [/tag]
             [/tag]
             [tag]
@@ -537,9 +527,7 @@
                     min="0"
                     max="infinite"
                     super="generic/widget_definition/resolution"
-                    [link]
-                        name="gui/window/resolution/grid"
-                    [/link]
+                    {LINK_TAG "gui/window/resolution/grid"}
                 [/tag]
             [/tag]
             [tag]
@@ -556,17 +544,13 @@
                         name="background"
                         min="0"
                         max="1"
-                        [link]
-                            name="generic/state/draw"
-                        [/link]
+                        {LINK_TAG "generic/state/draw"}
                     [/tag]
                     [tag]
                         name="foreground"
                         min="0"
                         max="1"
-                        [link]
-                            name="generic/state/draw"
-                        [/link]
+                        {LINK_TAG "generic/state/draw"}
                     [/tag]
                     {DEFAULT_KEY "bottom_border" unsigned 0}
                     {DEFAULT_KEY "left_border" unsigned 0}
@@ -662,9 +646,7 @@
                         max="1"
                         super="generic/state"
                     [/tag]
-                    [link]
-                        name="gui/window/resolution/grid"
-                    [/link]
+                    {LINK_TAG "gui/window/resolution/grid"}
                 [/tag]
             [/tag]
             [tag]
@@ -704,9 +686,7 @@
                     min="0"
                     max="infinite"
                     super="generic/widget_definition/resolution"
-                    [link]
-                        name="gui/window/resolution/grid"
-                    [/link]
+                    {LINK_TAG "gui/window/resolution/grid"}
                 [/tag]
             [/tag]
             [tag]
@@ -765,9 +745,7 @@
                     min="0"
                     max="infinite"
                     super="generic/widget_definition/resolution"
-                    [link]
-                        name="gui/window/resolution/grid"
-                    [/link]
+                    {LINK_TAG "gui/window/resolution/grid"}
                 [/tag]
             [/tag]
             [tag]
@@ -905,9 +883,7 @@
                         max="1"
                         super="generic/state"
                     [/tag]
-                    [link]
-                        name="gui/window/resolution/grid"
-                    [/link]
+                    {LINK_TAG "gui/window/resolution/grid"}
                 [/tag]
             [/tag]
             [tag]
@@ -920,9 +896,7 @@
                     min="0"
                     max="infinite"
                     super="gui/panel_definition/resolution"
-                    [link]
-                        name="gui/window/resolution/grid"
-                    [/link]
+                    {LINK_TAG "gui/window/resolution/grid"}
                 [/tag]
             [/tag]
             [tag]
@@ -1045,9 +1019,7 @@
                                     min="0"
                                     max="infinite"
                                     super="generic/widget_instance"
-                                    [link]
-                                        name="generic/state/draw"
-                                    [/link]
+                                    {LINK_TAG "generic/state/draw"}
                                     {DEFAULT_KEY "height" f_unsigned 0}
                                     {DEFAULT_KEY "width" f_unsigned 0}
                                 [/tag]
@@ -1290,9 +1262,7 @@
                                     min="0"
                                     max="infinite"
                                     super="generic/widget_instance"
-                                    [link]
-                                        name="gui/window/resolution/grid"
-                                    [/link]
+                                    {LINK_TAG "gui/window/resolution/grid"}
                                 [/tag]
                                 [tag]
                                     name="password_box"
@@ -1409,9 +1379,7 @@
                                     min="0"
                                     max="infinite"
                                     super="generic/widget_instance"
-                                    [link]
-                                        name="gui/window/resolution/grid"
-                                    [/link]
+                                    {LINK_TAG "gui/window/resolution/grid"}
                                     {DEFAULT_KEY "return_value" int 0}
                                     {DEFAULT_KEY "return_value_id" string ""}
                                 [/tag]
@@ -1469,9 +1437,7 @@
                                         super="gui/window/resolution/grid/row/column"
                                     [/tag]
                                 [/tag]
-                                [link]
-                                    name="gui/window/resolution/grid"
-                                [/link]
+                                {LINK_TAG "gui/window/resolution/grid"}
                                 {DEFAULT_KEY "border" border ""}
                                 {DEFAULT_KEY "border_size" unsigned 0}
                                 {DEFAULT_KEY "grow_factor" unsigned 0}
@@ -1534,15 +1500,9 @@
                     min="0"
                     max="infinite"
                     super="gui/panel_definition/resolution"
-                    [link]
-                        name="gui/panel_definition/resolution/background"
-                    [/link]
-                    [link]
-                        name="gui/panel_definition/resolution/foreground"
-                    [/link]
-                    [link]
-                        name="gui/window/resolution/grid"
-                    [/link]
+                    {LINK_TAG "gui/panel_definition/resolution/background"}
+                    {LINK_TAG "gui/panel_definition/resolution/foreground"}
+                    {LINK_TAG "gui/window/resolution/grid"}
                 [/tag]
             [/tag]
             {REQUIRED_KEY "description" t_string}
