--- a/data/schema/macros.cfg
+++ b/data/schema/macros.cfg
@@ -58,6 +58,12 @@
 	[/tag]
 #enddef
 
+#define LINK_TAG PATH
+	[link]
+		name="{PATH}"
+	[/link]
+#enddef
+
 # These are "magic" keys allowed whenever two WML tags are merged.
 #define WML_MERGE_KEYS
 	{SIMPLE_KEY __remove bool}
