--- a/data/schema/units/_main.cfg
+++ b/data/schema/units/_main.cfg
@@ -7,9 +7,7 @@
 		max=0
 		{./modifications.cfg}
 	[/tag]
-	[link]
-		name="units/$modifications/trait"
-	[/link]
+	{LINK_TAG "units/$modifications/trait"}
 
 	{./movetypes.cfg}
 	{./races.cfg}
@@ -29,9 +27,7 @@
 			{SIMPLE_KEY type string_list}
 			{SIMPLE_KEY race string_list}
 			{SIMPLE_KEY type_adv_tree string_list}
-			[link]
-				name="units/hide_help/not"
-			[/link]
+			{LINK_TAG "units/hide_help/not"}
 		[/tag]
 	[/tag]
 [/tag]
