--- a/data/schema/units/modifications.cfg
+++ b/data/schema/units/modifications.cfg
@@ -83,37 +83,27 @@
 			[case]
 				value=movement_costs
 				{SIMPLE_KEY replace s_bool}
-				[link]
-					name="units/movetype/movement_costs"
-				[/link]
+				{LINK_TAG "units/movetype/movement_costs"}
 			[/case]
 			[case]
 				value=vision_costs
 				{SIMPLE_KEY replace s_bool}
-				[link]
-					name="units/movetype/vision_costs"
-				[/link]
+				{LINK_TAG "units/movetype/vision_costs"}
 			[/case]
 			[case]
 				value=jamming_costs
 				{SIMPLE_KEY replace s_bool}
-				[link]
-					name="units/movetype/jamming_costs"
-				[/link]
+				{LINK_TAG "units/movetype/jamming_costs"}
 			[/case]
 			[case]
 				value=defense
 				{SIMPLE_KEY replace s_bool}
-				[link]
-					name="units/movetype/defense"
-				[/link]
+				{LINK_TAG "units/movetype/defense"}
 			[/case]
 			[case]
 				value=resistance
 				{SIMPLE_KEY replace s_bool}
-				[link]
-					name="units/movetype/resistance"
-				[/link]
+				{LINK_TAG "units/movetype/resistance"}
 			[/case]
 			[case]
 				value=variation
@@ -141,75 +131,35 @@
 			[/case]
 			[case]
 				value=new_ability,remove_ability
-				[link]
-					name="units/unit_type/abilities"
-				[/link]
+				{LINK_TAG "units/unit_type/abilities"}
 			[/case]
 			[case]
 				value=new_animation
 				{SIMPLE_KEY id string}
-				[link]
-					name="units/unit_type/animation"
-				[/link]
-				[link]
-					name="units/unit_type/defend"
-				[/link]
-				[link]
-					name="units/unit_type/death"
-				[/link]
-				[link]
-					name="units/unit_type/standing_anim"
-				[/link]
-				[link]
-					name="units/unit_type/movement_anim"
-				[/link]
-				[link]
-					name="units/unit_type/idle_anim"
-				[/link]
-				[link]
-					name="units/unit_type/attack_anim"
-				[/link]
-				[link]
-					name="units/unit_type/victory_anim"
-				[/link]
-				[link]
-					name="units/unit_type/pre_movement_anim"
-				[/link]
-				[link]
-					name="units/unit_type/post_movement_anim"
-				[/link]
-				[link]
-					name="units/unit_type/draw_weapon_anim"
-				[/link]
-				[link]
-					name="units/unit_type/sheath_weapon_anim"
-				[/link]
-				[link]
-					name="units/unit_type/leading_anim"
-				[/link]
-				[link]
-					name="units/unit_type/recruit_anim"
-				[/link]
-				[link]
-					name="units/unit_type/recruiting_anim"
-				[/link]
-				[link]
-					name="units/unit_type/healing_anim"
-				[/link]
-				[link]
-					name="units/unit_type/extra_anim"
-				[/link]
+				{LINK_TAG "units/unit_type/animation"}
+				{LINK_TAG "units/unit_type/defend"}
+				{LINK_TAG "units/unit_type/death"}
+				{LINK_TAG "units/unit_type/standing_anim"}
+				{LINK_TAG "units/unit_type/movement_anim"}
+				{LINK_TAG "units/unit_type/idle_anim"}
+				{LINK_TAG "units/unit_type/attack_anim"}
+				{LINK_TAG "units/unit_type/victory_anim"}
+				{LINK_TAG "units/unit_type/pre_movement_anim"}
+				{LINK_TAG "units/unit_type/post_movement_anim"}
+				{LINK_TAG "units/unit_type/draw_weapon_anim"}
+				{LINK_TAG "units/unit_type/sheath_weapon_anim"}
+				{LINK_TAG "units/unit_type/leading_anim"}
+				{LINK_TAG "units/unit_type/recruit_anim"}
+				{LINK_TAG "units/unit_type/recruiting_anim"}
+				{LINK_TAG "units/unit_type/healing_anim"}
+				{LINK_TAG "units/unit_type/extra_anim"}
 			[/case]
 			[case]
 				value=image_mod,overlay
 				{SIMPLE_KEY replace string}
 				{SIMPLE_KEY add string}
-				[link]
-					name="game_config/color_range"
-				[/link]
-				[link]
-					name="game_config/color_palette"
-				[/link]
+				{LINK_TAG "game_config/color_range"}
+				{LINK_TAG "game_config/color_palette"}
 			[/case]
 			[case]
 				value=ellipse
@@ -227,9 +177,7 @@
 				value=new_advancement
 				{SIMPLE_KEY replace s_bool}
 				{SIMPLE_KEY types string_list}
-				[link]
-					name="units/$modifications/advancement"
-				[/link]
+				{LINK_TAG "units/$modifications/advancement"}
 			[/case]
 			[case]
 				value=remove_advancement
