--- a/data/schema/units/races.cfg
+++ b/data/schema/units/races.cfg
@@ -18,7 +18,5 @@
 	{SIMPLE_KEY male_name_generator t_string}
 	{SIMPLE_KEY female_name_generator t_string}
 	{SIMPLE_KEY markov_chain_size int}
-	[link]
-		name="units/$modifications/trait"
-	[/link]
+	{LINK_TAG "units/$modifications/trait"}
 [/tag]
