--- a/data/schema/units/single.cfg
+++ b/data/schema/units/single.cfg
@@ -42,15 +42,9 @@
 	[tag]
 		name="modifications"
 		{INSERT_TAG}
-		[link]
-			name="units/$modifications/trait"
-		[/link]
-		[link]
-			name="units/$modifications/advancement"
-		[/link]
-		[link]
-			name="units/$modifications/object"
-		[/link]
+		{LINK_TAG "units/$modifications/trait"}
+		{LINK_TAG "units/$modifications/advancement"}
+		{LINK_TAG "units/$modifications/object"}
 	[/tag]
 	[tag]
 		name="ai"
@@ -59,30 +53,14 @@
 		{SIMPLE_KEY loop_formula formula}
 		{DATA_TAG vars 0 1}
 	[/tag]
-	[link]
-		name="event"
-	[/link]
-	[link]
-		name="units/movetype/movement_costs"
-	[/link]
-	[link]
-		name="units/movetype/vision_costs"
-	[/link]
-	[link]
-		name="units/movetype/jamming_costs"
-	[/link]
-	[link]
-		name="units/movetype/defense"
-	[/link]
-	[link]
-		name="units/movetype/resistance"
-	[/link]
-	[link]
-		name="units/unit_type/attack"
-	[/link]
-	[link]
-		name="units/unit_type/abilities"
-	[/link]
+	{LINK_TAG "event"}
+	{LINK_TAG "units/movetype/movement_costs"}
+	{LINK_TAG "units/movetype/vision_costs"}
+	{LINK_TAG "units/movetype/jamming_costs"}
+	{LINK_TAG "units/movetype/defense"}
+	{LINK_TAG "units/movetype/resistance"}
+	{LINK_TAG "units/unit_type/attack"}
+	{LINK_TAG "units/unit_type/abilities"}
 
 	{SIMPLE_KEY x s_coordinate}
 	{SIMPLE_KEY y s_coordinate}
