--- a/data/schema/units/types.cfg
+++ b/data/schema/units/types.cfg
@@ -39,12 +39,8 @@
 	{SIMPLE_KEY xp_bar_scaling real}
 	{SIMPLE_KEY zoc bool}
 	{SIMPLE_KEY flying bool}
-	[link]
-		name="units/$modifications/trait"
-	[/link]
-	[link]
-		name="units/$modifications/advancement"
-	[/link]
+	{LINK_TAG "units/$modifications/trait"}
+	{LINK_TAG "units/$modifications/advancement"}
 	[tag]
 		name="attack"
 		max=infinite
@@ -67,24 +63,12 @@
 		name="abilities"
 		{./abilities.cfg}
 	[/tag]
-	[link]
-		name="units/movetype/resistance"
-	[/link]
-	[link]
-		name="units/movetype/defense"
-	[/link]
-	[link]
-		name="units/movetype/movement_costs"
-	[/link]
-	[link]
-		name="units/movetype/vision_costs"
-	[/link]
-	[link]
-		name="units/movetype/jamming_costs"
-	[/link]
-	[link]
-		name="event"
-	[/link]
+	{LINK_TAG "units/movetype/resistance"}
+	{LINK_TAG "units/movetype/defense"}
+	{LINK_TAG "units/movetype/movement_costs"}
+	{LINK_TAG "units/movetype/vision_costs"}
+	{LINK_TAG "units/movetype/jamming_costs"}
+	{LINK_TAG "event"}
 	{./animations.cfg}
 [/tag]
 
