--- a/data/gui/window/preferences/03_display.cfg
+++ b/data/gui/window/preferences/03_display.cfg
@@ -260,6 +260,19 @@
 			[/grid]
 		[/column]
 	[/row]
+	[row]
+		[column]
+			border = "all"
+			border_size = 5
+			horizontal_alignment = "left"
+
+			[toggle_button]
+				id = "fps_limiter"
+				label = _ "FPS limiter"
+				tooltip = _ "Disabling this increases CPU usage to 100 % but may slightly improve performance at high resolutions"
+			[/toggle_button]
+		[/column]
+	[/row]
 #enddef
 
 #define _GUI_PREFERENCES_DISPLAY_GRID_2
