--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -101,6 +101,7 @@ set(server-external-libs
 	${Boost_RANDOM_LIBRARY}
 	${CRYPTO_LIBRARY}
 	${MYSQL_LIBS}
+	-lpthread
 )
 
 if(ENABLE_FRIBIDI AND FRIBIDI_FOUND)
