--- a/data/gui/window/preferences/03_display.cfg
+++ b/data/gui/window/preferences/03_display.cfg
@@ -260,6 +260,10 @@
 			[/grid]
 		[/column]
 	[/row]
+#endif
+
+	{_GUI_PREFERENCES_SPACER_ROW}
+
 	[row]
 		[column]
 			border = "all"
@@ -268,8 +272,8 @@
 
 			[toggle_button]
 				id = "fps_limiter"
-				label = _ "FPS limiter"
-				tooltip = _ "Disabling this increases CPU usage to 100 % but may slightly improve performance at high resolutions"
+				label = _ "Limit FPS"
+				tooltip = _ "Disabling this increases CPU usage to 100% but may slightly improve performance at high resolutions"
 			[/toggle_button]
 		[/column]
 	[/row]
