--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/07_Return_to_Oldwood.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/07_Return_to_Oldwood.cfg
@@ -54,7 +54,7 @@
         type=Ancient Wose
         id=Elilmaldur-Rithrandil
         name= _ "Elilmaldur-Rithrandil"
-        profile="portraits/rithrandil-winter.png"
+        profile="portraits/rithrandil-winter.png~SCALE(413,600)"
         canrecruit=yes
         team_name=treefolk
         user_team_name=_"Treefolk"
