--- a/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
@@ -1023,3 +1023,40 @@
         [/command]
     [/set_menu_item]
 #enddef
+
+# this is inserted in some scenarios to clear SotA Bats from older saves
+# it needs to be in all scenarios which use SIDE_1_ARDONNA, otherwise the player
+# may be able to recruit normal and SotA bats, or be able to recruit bats when
+# he plays someone who should not be able to do so
+#define SIDE_1_ARDONNA:TRANSFROM_BATS_TO_NORMAL_EVENT
+    # SotA bats were necessary for the ship where they were drawn behind the
+    # rigging, but not in later scenarios.
+    [event]
+        name=prestart
+
+        # First, we'll make sure newly recruited ones will be correct
+        [disallow_recruit]
+            side=1
+            type=Vampire Bat SotA
+        [/disallow_recruit]
+        [allow_recruit]
+            side=1
+            type=Vampire Bat
+        [/allow_recruit]
+
+        # Now the type of all bats on the recall list is changed
+        [lua]
+            code = <<
+                for i, u in ipairs(wesnoth.get_recall_units { type = 'Vampire Bat SotA, Blood Bat SotA, Dread Bat SotA' }) do
+                    if u.type == 'Vampire Bat SotA' then
+                        u:transform('Vampire Bat')
+                    elseif u.type == 'Blood Bat SotA' then
+                        u:transform('Blood Bat')
+                    elseif u.type == 'Dread Bat SotA' then
+                        u:transform('Dread Bat')
+                    end
+                end
+            >>
+        [/lua]
+    [/event]
+#enddef
